feat: extract ai features and invoice generation to new tany-features app
- Created a new Spring Boot application `tany-features` running on port 8081.
- Moved `ProductEmbeddingService`, `OrderAssistant`, LangChain AI Configuration and tools to the new application.
- Moved PDF `InvoiceServiceImpl` logic to `tany-features`, generating PDFs from a simplified `InvoiceDataDto`.
- Added an API Key (`X-Tany-Features-Api-Key`) authentication filter to `tany-features`.
- Refactored `tany-rest-api` main app: removed internal OpenPDF/LangChain4j logic.
- Created `TanyFeaturesClient` in the main app to communicate with the extracted API for embeddings, chat messages, and invoice generation.
- Cleaned up cross-sell AI features as requested.
- Updated unit tests in main app to mock `TanyFeaturesClient` correctly.

Co-authored-by: middlesboro <1727159+middlesboro@users.noreply.github.com>